# cache-simulator

./: .coveragerc  .flake8  .gitignore  .travis.yml  LICENSE.txt  README.md  examples.sh  examples.txt  pyproject.toml  requirements.txt  setup.py  simulator.py  table.py  tests.py
.github/workflows/: build.yml  lint.yml  publish.yml  tests.yml
cachesimulator/: __main__.py  bin_addr.py  cache.py  reference.py  simulator.py  table.py  word_addr.py
src/: simulator.py  table.py
tests/: test_compliance.py  test_simulator.py  test_simulator_display.py  test_simulator_examples.py  test_simulator_hit.py  test_simulator_main.py  test_simulator_refs.py  test_simulator_set_block.py  test_simulator_utility.py  test_table.py
